insertion + simmulated annnealing